--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using BloodBankWebApplication.Data;
+@inject SignInManager<Donor> SignInManager
+@inject UserManager<Donor> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
